<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="5dp"
        android:background="@drawable/textview"
        android:text="@string/ind_settings"
        android:layout_marginBottom="5dp"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true"
        android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/ind_score"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"/>
            <EditText
                android:id="@+id/et_ind_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:inputType="number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:text="@string/ind_set"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"/>
            <EditText
                android:id="@+id/et_ind_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="5dp"
            android:text="@string/ind_leg"
            android:layout_marginBottom="5dp"
            android:layout_columnWeight="1"/>
        <EditText
            android:id="@+id/et_ind_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_columnWeight="1"
            android:inputType="number"/>

    </GridLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:padding="5dp"
        android:background="@drawable/textview"
        android:text="@string/ind_player"
        android:layout_marginBottom="5dp"/>

    <RadioGroup
        android:id="@+id/rg_ind_playerSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:id="@+id/rb_ind_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_ind_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            android:textSize="20sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_ind_player3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rb_ind_player4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            android:textSize="20sp"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:padding="5dp"
        android:background="@drawable/textview"
        android:text="@string/ind_checkout"
        android:layout_marginBottom="5dp"/>

    <RadioGroup
        android:id="@+id/rg_ind_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:id="@+id/rb_ind_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_single"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_ind_double"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_double"
            android:checked="true"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rb_ind_triple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_triple"
            android:textSize="20sp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_ind_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/a_submit"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>

</LinearLayout>