<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_game_player"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="fill"
    android:layout_columnWeight="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/pn_player"/>
            <TextView
                android:id="@+id/tv_evap_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_sum"/>
            <TextView
                android:id="@+id/tv_evap_sum_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_avg"/>
            <TextView
                android:id="@+id/tv_evap_avg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_sumThrouhg"/>
            <TextView
                android:id="@+id/tv_evap_sum_through"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_bull"/>
            <TextView
                android:id="@+id/tv_evap_bull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_sbull"/>
            <TextView
                android:id="@+id/tv_evap_sbull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_o180"/>
            <TextView
                android:id="@+id/tv_evap_o180"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_o160"/>
            <TextView
                android:id="@+id/tv_evap_o160"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_o140"/>
            <TextView
                android:id="@+id/tv_evap_o140"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_o120"/>
            <TextView
                android:id="@+id/tv_evap_o120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_o100"/>
            <TextView
                android:id="@+id/tv_evap_o100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_single"/>
            <TextView
                android:id="@+id/tv_evap_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_double"/>
            <TextView
                android:id="@+id/tv_evap_double"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/eva_triple"/>
            <TextView
                android:id="@+id/tv_evap_triple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>