<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_eva_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:padding="5dp"
        android:background="@drawable/textview"
        android:text="@string/eva_win"
        android:layout_marginBottom="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <GridLayout
                    android:id="@+id/gl_eva_stats_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:rowCount="1"
                    android:columnCount="4"
                    android:useDefaultMargins="true"
                    >
                    <!-- Spieler Dynamic 1 & 2-->

                </GridLayout>
                <GridLayout
                    android:id="@+id/gl_eva_stats_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:rowCount="1"
                    android:columnCount="4"
                    android:useDefaultMargins="true">


                </GridLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">
            <Button
                android:id="@+id/btn_eva_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/eva_home"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_eva_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/eva_share"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_eva_take_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/eva_pic"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="5dp">
                <Button
                    android:id="@+id/btn_eva_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/eva_save"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_eva_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_columnWeight="1"
                    android:hint="@string/eva_name"
                    android:inputType="text"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/iv_eva_win_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_ts_icon_round"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>